# Chess

./: Assets.c  Assets.h  Board.c  Board.h  CMakeLists.txt  Check.c  Check.h  Chess  ConclusionesArlyn.txt  ConclusionesCaro.txt  Events.c  Events.h  Files.c  Files.h  Globals.h  Graphics.c  Graphics.h  Mouse.c  Mouse.h  Movements.c  Movements.h  Structs.h  Validationpieces.c  Validationpieces.h  main.c
OLD/: Board (2).c  Board (2).h  CMakeLists (2).txt  Globals.h  Graphics.c  Graphics.h  Mouse.c  Validationpieces.c  Validationpieces01.c
